# finerseek

./: .gitignore  README.md  milvus.db  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
api/: index.py
api/services/: api_test.py  api_test_LLM.py  api_test_VLM.py  chat_completions.py  database_initiation.py  document_process.py  extract_ultils.py
app/: globals.css  layout.tsx  page.tsx
app/api/upload/: route.ts
app/app/artifacts/: page.tsx
app/app/chatbot/: page.tsx
app/app/chatbot/[id]/: page.tsx
components/: artifacts.tsx  btn.tsx  chat-input.tsx  chatbot.tsx  input.tsx  messages.tsx  navigation-menu.jsx  sidebar.tsx  style.css  topbar.tsx
components/hooks/: use-scroll-to-bottom.ts  use-window-size.ts
lib/: interfaces.ts  placeholders-data.ts
