[project]
name = "finerseek"
version = "0.1.0"
description = "A Project for better finance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
