[project]
name = "finerseek"
version = "0.1.0"
description = "A Project for better finance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.4.1",
    "docx>=0.2.4",
    "fastapi>=0.115.8",
    "flagembedding>=1.3.4",
    "openpyxl>=3.1.5",
    "peft>=0.15.0",
    "pymilvus>=2.5.6",
    "pymilvus-model>=0.3.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
