[project]
name = "finerseek"
version = "0.1.0"
description = "A Project for better finance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "camelot>=12.6.29",
    "datasets>=3.4.1",
    "fastapi>=0.115.8",
    "fitz>=0.0.1.dev2",
    "flagembedding>=1.3.4",
    "frontend>=0.0.3",
    "milvus-model>=0.2.12",
    "openai>=1.68.2",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.5",
    "peft>=0.15.0",
    "pymilvus>=2.5.6",
    "pymilvus-model>=0.3.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "tools>=0.1.9",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
